Added a favicon and changed input:focus colour from blue to gold

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel='icon' href='images/form.png'>
     <script src="main.js" defer></script>
     <title>Odin Form</title>
 </head>
 <body>
     <div class="gridContainer">
-        <div class="hero"><h1>Going Once, Going Twice - Kintsugi Away!</h1></div>
+        <div class="hero">
+            <h1>Going Once, Going Twice - Kintsugi Away!</h1>
+        </div>
         <div class="rightSide">
             <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</h2>
             <h2>You <em>know</em> you want to.</h2>
@@ -24,9 +27,16 @@
                     <label for="Pass">Password<input required type="password" name="pass" id="pass"></label>
                     <label for="confPass">Confirm Password<input required type="password" name="confPass" id="confPass"></label>
                 </form>
-            </div>
+
             <button type="submit" form="newUser">Create Account</button>
             <p class="logInOption">Already have an account? <a href="#">Log In</a></p>
+        </div>
+        <div class='footer'>
+            <p>Copyright © 2021 beiyingseah&nbsp
+            <a href='https://github.com/beiyingseah'>
+                <img src='images/githubLogo32px.png' alt='Github&#39s icon, a feline-cephalopod hybrid, known as Octocat.' width='20' height='20'>
+            </a>
+            </p>
         </div>
     </div>
 </body>
